# EyeFeatures

./: .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  LICENCE  README.md  base-requirements.txt  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
checks/: linters.sh
data/benchmark/: ASD_fixations.parquet  Dyslexia_1_fixations.parquet  Dyslexia_Czech_fixations.parquet  Dyslexia_Czech_gazes.parquet  Learning_to_predict_where_humna_look_gazes.parquet  Surgical_skills_1_gazes.parquet  meta.json
data/blinks/: blinks_subset.csv
data/collection/: Cognitive_load_gazes.parquet  Dyslexia_2_fixations.parquet  Emotions_gazes.parquet  Paris_experiment_fixations.parquet  Surgical_skills_1_fixations.parquet  Surgical_skills_2_fixations.parquet  Surgical_skills_2_gazes.parquet  meta.json
data/fixations/: fixations_subset.csv
data/gazes/: gazes_subset.csv
docs/: all_methods.rst  changelog.rst  conf.py  contribution.rst  eyefeatures.deep.rst  eyefeatures.preprocessing.rst  index.rst  installation.rst  modules.rst  overview.rst  quickstart.rst
docs/api/: api.rst  eyefeatures.deep.rst  eyefeatures.features.rst  eyefeatures.preprocessing.rst  eyefeatures.rst  eyefeatures.visualization.rst  index.rst  modules.rst  preprocessing.rst
docs/examples/: extractor.py  fixation_extraction.py
docs/quickstart/: quickstart.rst
examples/: advanced_all_features.py  advanced_pipeline.py  basic_features.py  basic_fixation.py  basic_scanpath.py
experiments/: additional_experiment.ipynb  experiment_1.ipynb  experiment_2.ipynb  fixation_extraction.ipynb
experiments/benchmark_experiments/: README.md  create_splits.ipynb  feature_extraction_all.ipynb  gaze_idt_fixation_extraction.ipynb  training.ipynb
experiments/collection_experiments/: README.md  create_splits.ipynb  feature_extraction_all.ipynb  gaze_idt_fixation_extraction.ipynb  training.ipynb
eyefeatures/: utils.py
eyefeatures/data/: __init__.py  benchmark.py  utils.py
eyefeatures/deep/: datasets.py  models.py
eyefeatures/examples/: advanced_all_features.py  advanced_pipeline.py  basic_features.py
eyefeatures/features/: complex.py  dist.py  extractor.py  feature_maps.py  measures.py  pairwise.py  scanpath_complex.py  scanpath_dist.py  shift.py  stats.py
eyefeatures/preprocessing/: _utils.py  aoi_extraction.py  base.py  blinks_extraction.py  fixation_extraction.py  smoothing.py
eyefeatures/visualization/: dynamic_visualization.py  static_visualization.py
eyetracking/: AOI_definition_tutorial.md  preprocessing_tutorial.md  scanpath_dist_measures_intro.md  utils.py  visualization_tutorial.md
eyetracking/deep/: datasets.py  models.py
eyetracking/features/: benchmark_before.ipynb  complex.py  extractor.py  measures.py  scanpath_complex.py  scanpath_dist.py  stats.py  test.ipynb  test_complex.ipynb  test_distance.ipynb  test_new.ipynb  test_new.md
eyetracking/preprocessing/: AOI_definition_tutorial.ipynb  _utils.py  aoi_defining.py  aoi_extraction.py  base.py  blinks_extraction.py  fixation_extraction.py  smoothing.py  test.ipynb  test_blinks.ipynb  test_preprocessing.ipynb  test_smoothing.ipynb
eyetracking/visualization/: dynamic_visualization.py  static_visualization.py  visualization_test.ipynb
tests/: conftest.py  test_blinks.ipynb  test_complex.ipynb  test_distance.ipynb  test_preprocessing.ipynb  test_shift.ipynb  test_smoothing.ipynb  test_static_visualization.ipynb  test_stats.ipynb  test_stats_grouping.ipynb  test_utils.py
tests/data/: __init__.py  test_utils.py
tutorials/: AOI_definition_tutorial.ipynb  AOI_definition_tutorial.md  DL_tutorial.ipynb  DL_tutorial.md  complex_tutorial.ipynb  complex_tutorial.md  feature_maps_tutorial.ipynb  features_tutorial.ipynb  features_tutorial.md  preprocessing_tutorial.ipynb  preprocessing_tutorial.md  visualization_tutorial.ipynb  visualization_tutorial.md  walkthrough.ipynb
(+229 files in other folders)
