[tool.poetry]
name = "eyefeatures"
version = "1.1.0"
description = "Preprocessing, visualization, statistical analysis, feature engineering, and machine learning of eye movement data."
authors = ["Vagiz Daudov <vagiz.0282@gmail.com>"]
readme = "README.md"
packages = [{include = "eyefeatures"}]

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
matplotlib = "3.8.4"
numba = "0.60.0"
numpy = "1.26.0"
pandas = "2.2.2"
scikit-learn = "1.5.1"
scikit_multilearn = "0.2.0"
scipy = "1.14.1"
tqdm = "4.66.4"
EMD-signal = "1.6.4"
gudhi = "3.10.1"

[tool.poetry.group.docs.dependencies]
sphinx = "8.1.3"
sphinx_rtd_theme  = "*"
m2r2 = "^0.3.3.post2"
docutils = "0.20"

[too.poetry.group.dev]
optional = true


[tool.poetry.group.dev.dependencies]
black = "24.3.0"
isort = "5.12.0"
flake8 = "6.1"
openpyxl = "3.1.5"
plotly = "6.1.1"
seaborn = "0.13.2"
pre-commit = "^4.5.1"


[tool.poetry.group.deep]
optional = true

[tool.poetry.group.deep.dependencies]
pytorch_lightning = "2.4.0"
torch = "2.4.0"
torch_geometric = "2.5.3"
torchmetrics = "1.4.1"


[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
pytest = "^8.0.0"
pytest-cov = "^4.1.0"
pytest-xdist = "^3.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[project]
license = {file = "LICENSE"}
name = "eyefeatures"
authors = [
    {name = "Kondaurov Zakhar"},
    {name = "Tikhonov Daniil"},
    {name = "Anton Surkov", email = "aysurkov@hse.ru"},
    {name = "Vagiz Daudov", email = "vagiz.0282@gmail.com"}
]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
filterwarnings = [
    "ignore:.*maximum_filter:DeprecationWarning:PyEMD.EMD2d",
    "ignore:.*binary_erosion:DeprecationWarning:PyEMD.EMD2d",
    "ignore:.*generate_binary_structure:DeprecationWarning:PyEMD.EMD2d",
]

[tool.coverage.run]
source = ["eyefeatures"]
omit = []

[tool.coverage.report]
fail_under = 80
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]

[tool.black]
line-length = 88
target-version = ['py312']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.flake8]
max-line-length = 88
extend-ignore = ["E501"]
